added comments to css styles and index.html

--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -4,27 +4,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Title of the webpage -->
   <title>Simple Webpage</title>
+  <!-- Linking the external stylesheet for styling -->
   <link rel="stylesheet" href="/Assignment2/style.css">
 </head>
 
 <body>
+
+  <!-- Main container for the webpage content -->
   <div class="container">
+
+    <!-- Header section with a centered heading -->
     <div class="header">
       <header>
         Who is Phindile S Nkhutha?
       </header>
     </div>
+
+    <!-- Profile section with an image and related information -->
     <div class="profile">
+
+      <!-- Left section for the profile image -->
       <div class="left-img">
         <img src="/Assignment2/assets/maphindie.jpg" alt="Phindile s">
       </div>
+
+      <!-- Right section for the profile text -->
       <div class="profile-text">
         <ul>
+          <!-- List items with details about Phindile S -->
           <li><Span>Fullname:</Span> Phindile S Nkhutha</li>
           <li><span>Age:</span> 24</li>
           <li><span>Marital Status:</span> Married</li>
           <li><span>Hobbies:</span>
+
+            <!-- Ordered list for hobbies -->
             <ol>
               <li> Cooking</li>
               <li> Hiking</li>
@@ -34,6 +49,8 @@
         </ul>
       </div>
     </div>
+
+    <!-- Content section with About heading and paragraphs -->
     <div class="content">
       <h2>About</h2>
       <p>My name is <span>Phindile S Nkhutha.</span> I am a lady aged 24.I have been trying to break into tech for a
@@ -49,6 +66,8 @@
         I am so motivated to be undertaking this journey with other black women that are also having the same goal as
         mine,to bridge the gender gap in the tech space! </p>
     </div>
+
+    <!-- Footer area containing copyright details -->
     <footer>
       <p>&copy; 2023 a_lady_and_her_computer. All rights reserved.</p>
     </footer>
