Added a readme file and also added internal css styles

--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -8,6 +8,18 @@
   <title>Simple Webpage</title>
   <!-- Linking the external stylesheet for styling -->
   <link rel="stylesheet" href="/Assignment2/style.css">
+  <!-- internal styles -->
+  <style>
+  h1 {
+  font-size: 2em;
+  color: #333;
+} 
+p {
+  font-size: 12px;
+  line-height: 16px;
+  color: #413f3f;
+}
+  </style>
 </head>
 
 <body>
